# quick-pdf

./: README.md  pyproject.toml
qpdf/: __init__.py  _append.py  _core.py  _exception.py  _info.py  pdf_append.py
qpdf/cli/: pdf_append.py
qpdf/gui/: __init__.py  _app.py  _home.py  _tools.py  main.py
qpdf/gui/_pdf_tools/: __init__.py  _append.py  _core.py
qpdf/gui/_tools/: __init__.py  _append.py
qpdf/gui/core/: __init__.py  _tools.py
