[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quick-pdf"
version = "0.1.0"
description = "Quick PDF tools"
dependencies = [
  "pypdf>=6.6",
]

[project.optional-dependencies]
dev = [
    "black>=25.12",
    "isort>=7.0",
    "mypy>=1.19",
    "tox>=4.19",
]

[project.scripts]
pdf-append = "qpdf.pdf_append:main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
strict = true

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["lint", "typecheck"]

[tool.tox.env.lint]
extras = ["dev"]
commands = [
    ["black", "--check", "."],
    ["isort", "--check", "."],
]

[tool.tox.env.typecheck]
extras = ["dev"]
commands = [
    ["mypy", "."],
]
